<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/shoeImage"
        android:layout_width="@dimen/_320"
        android:layout_height="@dimen/_220"
        android:layout_marginStart="@dimen/space_8"
        android:contentDescription="@string/shoe_desc"
        android:rotation="330"
        android:translationZ="@dimen/space_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/yellow_show" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/_250"
        android:layout_height="@dimen/_300"
        android:layout_marginTop="@dimen/space_8"
        android:layout_marginBottom="@dimen/space_8"
        android:layout_marginEnd="@dimen/space_8"
        android:layout_marginStart="@dimen/space_20"
        android:elevation="@dimen/_0"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="@dimen/space_32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardInnerParent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name"
                style="@style/CardItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_24"
                android:layout_marginTop="@dimen/space_32"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/air" />

            <TextView
                android:id="@+id/price"
                style="@style/CardItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/name"
                app:layout_constraintTop_toBottomOf="@id/name"
                tools:text="@string/price_placeholder" />

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/space_8"
                android:layout_marginBottom="@dimen/space_48"
                android:background="@color/faded_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/price"
                app:layout_constraintTop_toBottomOf="@id/price" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>